; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/test/bsm/extr_generate.c_write_record.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/test/bsm/extr_generate.c_write_record.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_AUDIT_RECORD_SIZE = common dso_local global i32 0, align 4
@EX_UNAVAILABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"au_open\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"au_write\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"au_close_buffer\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32*, i16)* @write_record to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_record(i8* %0, i8* %1, i32* %2, i16 signext %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i16, align 2
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i16 %3, i16* %8, align 2
  %14 = load i32, i32* @MAX_AUDIT_RECORD_SIZE, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %9, align 8
  %17 = alloca i32, i64 %15, align 16
  store i64 %15, i64* %10, align 8
  %18 = call i32 (...) @au_open()
  store i32 %18, i32* %12, align 4
  %19 = load i32, i32* %12, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %4
  %22 = load i32, i32* @EX_UNAVAILABLE, align 4
  %23 = call i32 @err(i32 %22, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %4
  %25 = load i32, i32* %12, align 4
  %26 = load i32*, i32** %7, align 8
  %27 = call i64 @au_write(i32 %25, i32* %26)
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load i32, i32* @EX_UNAVAILABLE, align 4
  %31 = call i32 @err(i32 %30, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  br label %32

32:                                               ; preds = %29, %24
  %33 = load i32, i32* @MAX_AUDIT_RECORD_SIZE, align 4
  %34 = sext i32 %33 to i64
  store i64 %34, i64* %11, align 8
  %35 = load i32, i32* %12, align 4
  %36 = load i16, i16* %8, align 2
  %37 = call i64 @au_close_buffer(i32 %35, i16 signext %36, i32* %17, i64* %11)
  %38 = icmp slt i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %32
  %40 = load i32, i32* @EX_UNAVAILABLE, align 4
  %41 = call i32 @err(i32 %40, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  br label %42

42:                                               ; preds = %39, %32
  %43 = load i8*, i8** %5, align 8
  %44 = load i8*, i8** %6, align 8
  %45 = call i32 @open_file(i8* %43, i8* %44)
  store i32 %45, i32* %13, align 4
  %46 = load i32, i32* %13, align 4
  %47 = load i64, i64* %11, align 8
  %48 = load i8*, i8** %6, align 8
  %49 = call i32 @write_file(i32 %46, i32* %17, i64 %47, i8* %48)
  %50 = load i32, i32* %13, align 4
  %51 = call i32 @close(i32 %50)
  %52 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %52)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @au_open(...) #2

declare dso_local i32 @err(i32, i8*) #2

declare dso_local i64 @au_write(i32, i32*) #2

declare dso_local i64 @au_close_buffer(i32, i16 signext, i32*, i64*) #2

declare dso_local i32 @open_file(i8*, i8*) #2

declare dso_local i32 @write_file(i32, i32*, i64, i8*) #2

declare dso_local i32 @close(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
